--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vongo",
+  "name": "create-react-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config config/webpack.dev.js",
