--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config config/webpack.dev.js",
-    "prod": "node config/build.js"
+    "build": "node config/build.js"
   },
   "keywords": [],
   "author": "hyiron",
