--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^5.1.5",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
@@ -38,6 +39,7 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-url": "^7.3.2",
+    "react-hot-loader": "^4.3.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "thread-loader": "^1.1.5",
@@ -52,9 +54,12 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
