--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "create-react-app",
+  "name": "react-typescript-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config config/webpack.dev.js",
+    "dev": "webpack-dev-server --port=8080 --config config/webpack.dev.js",
     "build": "node config/build.js"
   },
-  "keywords": [],
-  "author": "hyiron",
-  "license": "ISC",
+  "keywords": [
+    "react",
+    "typescript",
+    "boilerplate"
+  ],
+  "author": "justemit",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^16.3.14",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^6.0.0",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/redux": "^3.6.0",
     "autoprefixer": "^8.5.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -46,6 +46,7 @@
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
@@ -53,9 +54,7 @@
   },
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "react-dom": "^16.3.2"
   },
   "browserslist": [
     "> 1%",
