--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/enzyme": "^3.1.12",
+    "@types/jest": "^23.3.1",
     "@types/react": "^16.3.14",
     "autoprefixer": "^8.5.0",
     "babel-cli": "^6.26.0",
