--- a/.babelrc
+++ b/.babelrc
@@ -1,41 +1,16 @@
 {
-  "presets": [
-    "@babel/preset-react",
+  "presets": ["react", "env"],
+  "plugins": [
+    "transform-runtime",
+    "syntax-dynamic-import",
+    "react-loadable/babel",
+    "transform-object-rest-spread",
     [
-      "@babel/preset-env",
+      "import",
       {
-        "modules": false
+        "libraryName": "antd",
+        "style": "css"
       }
     ]
-  ],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-    "react-hot-loader/babel",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-syntax-import-meta",
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-json-strings",
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    "@babel/plugin-proposal-function-sent",
-    "@babel/plugin-proposal-export-namespace-from",
-    "@babel/plugin-proposal-numeric-separator",
-    "@babel/plugin-proposal-throw-expressions",
-    "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-logical-assignment-operators",
-    "@babel/plugin-proposal-optional-chaining",
-    [
-      "@babel/plugin-proposal-pipeline-operator",
-      {
-        "proposal": "minimal"
-      }
-    ],
-    "@babel/plugin-proposal-nullish-coalescing-operator",
-    "@babel/plugin-proposal-do-expressions",
-    "@babel/plugin-proposal-function-bind"
   ]
 }
