--- a/package.json
+++ b/package.json
@@ -1,87 +1,52 @@
 {
-  "name": "react-typescript-boilerplate",
-  "version": "0.0.1",
-  "scripts": {
-    "test": "cross-env NODE_ENV=test jest",
-    "dev": "webpack-dev-server --port=8080 --config config/webpack.dev.js",
-    "build": "node config/build.js"
-  },
-  "keywords": [
-    "react",
-    "typescript",
-    "boilerplate"
-  ],
-  "author": "justemit",
+  "name": "react-ssr-boilerplate",
+  "version": "1.0.0",
+  "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "rimraf dist && babel-node server.js --presets react,env ",
+    "start": "cross-env NODE_ENV=production node dist/server.prod.js",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:server": "babel server.js -o dist/server.prod.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.conf.js --progress --hide-modules"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@types/enzyme": "^3.1.12",
-    "@types/jest": "^23.3.1",
-    "@types/react": "^16.3.14",
-    "autoprefixer": "^8.5.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.0",
-    "cache-loader": "^1.2.2",
-    "chalk": "^2.4.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "babel-cli": "^6.11.4",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.9.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
-    "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "file-loader": "^1.1.11",
+    "css-loader": "^1.0.0",
+    "css-modules-require-hook": "^4.2.3",
     "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.4.2",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "ora": "^2.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.5",
-    "postcss-url": "^7.3.2",
-    "react-hot-loader": "^4.3.3",
+    "mini-css-extract-plugin": "^0.4.3",
+    "react-hot-loader": "^4.3.11",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.1",
-    "thread-loader": "^1.1.5",
-    "ts-jest": "^23.0.1",
-    "ts-loader": "^4.3.0",
-    "typescript": "^2.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.2",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "asset-require-hook": "^1.2.0",
+    "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "serialize-javascript": "^1.5.0"
+  }
 }
